--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
 @import "tailwindcss";
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 14px;
+  background-color: #004d43;
+}
+
 @font-face {
   font-family: "Navbar";
   src: url("./assets/Fonts/NeueMontreal-Regular.ttf");
+}
+@font-face {
+  font-family: "textStruct";
+  src: url('./assets/Fonts/FoundersGrotesk-Semibold.ttf');
 }
